# gaya

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: test.yml
bench/: array.gaya  array.py  assignment.gaya  assignment.py
docs/: 404.html  README.md  SUMMARY.md  arrays.md  bench.md  book.toml  core.md  dictionaries.md  grammar.bnf  grammar.txt  index.html  print.html  searchindex.js  searchindex.json  sequences.md  strings.md  toc.md
docs/getting-started/: hello-gaya.html  hello-gaya.md  installing.html  installing.md  tooling.html  tooling.md
docs/reference/: arithmetic.md  assignment.html  assignment.md  basic-syntax.html  basic-syntax.md  cases-expression.html  cases-expression.md  closures.html  closures.md  comments.md  comparison.md  control-flow.html  control-flow.md  do-expression.html  do-expression.md  enums.html  enums.md  function.html  function.md  include.html  include.md  let-expression.html  let-expression.md  literals.md  match-expression.html  match-expression.md  operators.html  operators.md  perform.html  perform.md  pipe-operator.md  structs.html  structs.md  truthiness.html  truthiness.md  while-loops.md
docs/std/: arrays.html  arrays.md  core.html  core.md  dictionaries.html  dictionaries.md  functions.html  functions.md  io.html  io.md  math.html  math.md  sequences.html  sequences.md  strings.html  strings.md
docs/types/: arrays.html  arrays.md  dictionaries.html  dictionaries.md  sequences.html  sequences.md  strings.html  strings.md
editors/vim/ftdetect/: gaya.vim
editors/vim/ftplugin/: gaya.vim
editors/vim/indent/: gaya.vim
editors/vim/syntax/: gaya.vim
examples/: aoc.gaya  arithmetic.gaya  array_iteration_manually.gaya  array_library.gaya  array_print.gaya  array_with_function.gaya  assignment_cant_globals_parameters.gaya  assignment_cant_mutate_parameters.gaya  assignment_local.gaya  assignment_mutates_local_variables.gaya  calc.gaya  closure_captures_local.gaya  closure_captures_parameter.gaya  closure_nested.gaya  command_line_arguments.gaya  comparison.gaya  counter.gaya  do.gaya  do_block_execute_multiple_times.gaya  do_cases.gaya  fibonacci.gaya  function_can_be_invoked_immediatly.gaya  function_identity.gaya  hello_ffi.gaya  hello_world.gaya  input.gaya  local_assignment.gaya  local_definition_shadows_parameter.gaya  max.gaya  minmax.gaya  nested_closure.gaya  numbers.gaya  object.gaya  operator_comparison.gaya  perform_works_on_assignment.gaya  perform_works_on_while.gaya  pipes.gaya  pipes_cant_use_placeholder_more_than_once.gaya  pipes_dont_work_with_non_unary_functions.gaya  pipes_work_with_arbitray_expressions.gaya  (+15 more)
include/: ast.hpp  ast_visitor.hpp  diagnostic.hpp  env.hpp  eval.hpp  file_reader.hpp  lexer.hpp  nanbox.h  object.hpp  parser.hpp  repl.hpp  resolver.hpp  robin_hood.h  sequence.hpp  span.hpp  types.hpp
include/ast/: add_numbers.hpp  assignment.hpp  compare_numbers.hpp  enum.hpp  forward.hpp  identifier.hpp  less_than_numbers.hpp  struct.hpp  upto.hpp
include/builtins/: aoc.hpp  array.hpp  core.hpp  dict.hpp  io.hpp  math.hpp  sequence.hpp  string.hpp
lib/: CMakeLists.txt  ast.cpp  diagnostic.cpp  env.cpp  eval.cpp  lexer.cpp  object.cpp  parser.cpp  resolver.cpp  span.cpp  types.cpp
lib/builtins/: aoc.cpp  core.cpp  dict.cpp  io.cpp  math.cpp  string.cpp
lib/object/: arity.cpp  call.cpp  cmp.cpp  equals.cpp  hash.cpp  is_callable.cpp  is_comparable.cpp  is_sequence.cpp  is_truthy.cpp  next.cpp  to_sequence.cpp  to_string.cpp  typeof.cpp
runtime/: arrays.gaya  base.gaya  dictionaries.gaya  functions.gaya  math.gaya  sequences.gaya  stdlib.gaya  strings.gaya
scripts/: build_debug.sh  build_release.sh  test.rb  test.sh  test_examples.sh
src/: CMakeLists.txt  ast.cpp  diagnostic.cpp  env.cpp  eval.cpp  file_reader.cpp  lexer.cpp  main.cpp  object.cpp  parser.cpp  repl.cpp  repl.hpp  sequence.cpp  span.cpp  types.cpp
src/builtins/: array.cpp  core.cpp  dict.cpp  io.cpp  math.cpp  sequence.cpp  string.cpp
src/object/: arity.cpp  call.cpp  cmp.cpp  equals.cpp  hash.cpp  is_callable.cpp  is_comparable.cpp  is_sequence.cpp  is_truthy.cpp  next.cpp  to_sequence.cpp  to_string.cpp  typeof.cpp
src/repl/: CMakeLists.txt  raw.cpp  repl.d  run_line.cpp
tests/: CMakeLists.txt  arithmetic.gaya  array_iteration_manually.gaya  array_library.gaya  array_print.gaya  array_with_function.gaya  assignment_cant_globals_parameters.gaya  assignment_cant_mutate_parameters.gaya  assignment_global.gaya  assignment_in_case.gaya  assignment_local.gaya  assignment_local_shadows_parameter.gaya  assignment_mutates_local_variables.gaya  assignment_scope.gaya  assignment_to_call_expression.gaya  assignment_to_function.gaya  case.gaya  closed_over_vars_are_early_bound.gaya  closure_captures_local.gaya  closure_captures_parameter.gaya  closure_nested.gaya  corecursive.gaya  dictionary.gaya  dictionary_library.gaya  division_by_zero_returns_unit.gaya  do.gaya  do_block_execute_multiple_times.gaya  do_cases.gaya  dot_as_statement_terminator.gaya  enum.gaya  file_to_be_included.gaya  file_to_be_included_without_extension.gaya  for_stmt.gaya  function_can_be_invoked_immediatly.gaya  function_default_argument.gaya  function_empty_body.gaya  function_identity.gaya  function_recursion.gaya  function_typed_params.gaya  include.gaya  (+42 more)
